--- a/unitsListVolume.plist
+++ b/unitsListVolume.plist
@@ -26,7 +26,7 @@
 	<real>8294.4</real>
 	<key>Kortov -</key>
 	<real>5.4</real>
-	<key>Log -</key>
+	<key>Log - לוג</key>
 	<real>345.6</real>
 	<key>Hin -</key>
 	<real>4147.2</real>
