I now have finished the Volume viewcontroller and the main.storyboard portion for it. To do: Finish the code for each ViewController

--- a/unitsListVolume.plist
+++ b/unitsListVolume.plist
@@ -49,7 +49,7 @@
 	<key>Mesura - משורה</key>
 	<integer>9</integer>
 	<key>Inch³ - אינטש מעוקב</key>
-	<real>0.0610237</real>
+	<real>16.3871</real>
 	<key>Foot³ - פוט מעוקב</key>
 	<real>28316.8</real>
 	<key>Fluid Ounce</key>
