--- a/unitsListVolume.plist
+++ b/unitsListVolume.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>Milliliter - מיליליטר</key>
 	<integer>1</integer>
-	<key>Liter - ליטר</key>
+	<key>Litre - ליטר</key>
 	<integer>1000</integer>
 	<key>Centimeter³ - סנטימטר מוקב</key>
 	<integer>1</integer>
