--- a/unitsListMass.plist
+++ b/unitsListMass.plist
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   unitsListMass.plist
-   Unit Converter
-
-   Created by Aaron Nash on 2016-12-26.
-   Copyright (c) 2017 Aaron Nash. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<dict>
+	<key>Graem - גרם</key>
+	<string></string>
+</dict>
 </plist>
