--- a/unitsListCurrency.plist
+++ b/unitsListCurrency.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>American Dollar - דולר אמריקני</key>
+	<key>American Dollar $ - דולר אמריקני</key>
 	<integer>1</integer>
 	<key>Canadian Dollar $ - דולר קנדי</key>
 	<real>1.35</real>
